--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,23 @@
   <i class="fas fa-home"></i> Home
 </a>
   <style>
+    .home-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;          /* change to `left: 1rem;` if you prefer top-left */
+    background: white;
+    color: var(--primary);
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    text-decoration: none;
+    font-weight: 600;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background 0.3s ease;
+  }
+  .home-btn:hover {
+    background: var(--accent);
+    color: #fff;
+  }
     :root {
       --primary: #003e6b;
       --accent: #0077cc;
