--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpha Iota Short Courses</title>
+  <title>Continuous Organizational Readiness & Excellence Online Courses</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- FontAwesome Icons -->
@@ -160,13 +160,13 @@
 
   <header data-aos="fade-down">
     <h1 class="animate__animated animate__fadeInDown"><i class="fas fa-graduation-cap"></i> Alpha Iota Short Courses</h1>
-    <p class="animate__animated animate__fadeInUp">Empowering your growth through Alpha Learning — our internal online learning hub.</p>
+    <p class="animate__animated animate__fadeInUp">The Alpha Iota CORE Library - Our very own internal online short courses site</p>
   </header>
 <a href="index.html" class="home-btn">
   <i class="fas fa-home"></i> Home
 </a>
   <div class="container section-title" data-aos="zoom-in">
-    <h2>Explore Our Learning Categories</h2>
+    <h2>Choose your assigned short course</h2>
   </div>
 
   <div class="container">
@@ -227,31 +227,38 @@
 
   <!-- Info Banner -->
   <div class="info-banner" data-aos="fade-in" data-aos-delay="200">
-    <h4>What is Alpha Learning?</h4>
-    <p>Alpha Learning is our in-house training facility where you can develop competencies through quick, focused content — aligned with how we work and grow.</p>
-  </div>
+    <h4>What is Project C.O.R.E?</h4>
+    <p style="color: #34495e; line-height: 1.6; font-size: 16px;">
+    <strong>Project CORE</strong> is a <strong>team-led initiative by HR-LOE</strong> designed to empower our organization and its members through self-paced online short courses.
+  </p>
+  <p style="color: #34495e; line-height: 1.6; font-size: 16px;">
+    It supports individual career growth by focusing on <em>modern-day soft skills</em>, encouraging <strong>learning by doing</strong>, and nurturing <strong>higher-order thinking</strong>.
+  </p>
+  <p style="color: #34495e; line-height: 1.6; font-size: 16px;">
+    Through interactive exercises and self-discovery tools, learners can actively shape their professional development journey at their own pace.
+  </p>
 
   <!-- Features Section -->
   <div class="features-section container" data-aos="fade-up">
-    <h2 class="text-center mb-5">How We Support Your Growth</h2>
-    <div class="row text-center">
-      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
-        <i class="fas fa-chalkboard-teacher feature-icon"></i>
-        <h5>Guided Courses</h5>
-        <p>Short, practical activities for better retention.</p>
-      </div>
-      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
-        <i class="fas fa-laptop-code feature-icon"></i>
-        <h5>Learn Anywhere</h5>
-        <p>Access modules anytime — enter your code and go.</p>
-      </div>
-      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
-        <i class="fas fa-user-check feature-icon"></i>
-        <h5>Role-Aligned</h5>
-        <p>Courses support day-to-day roles across departments.</p>
-      </div>
+  <h2 class="text-center mb-5">Project CORE</h2>
+  <div class="row text-center">
+    <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
+      <i class="fas fa-lightbulb feature-icon"></i>
+      <h5>Self-Paced Learning</h5>
+      <p>Access short online courses anytime, anywhere, at your own pace.</p>
+    </div>
+    <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
+      <i class="fas fa-brain feature-icon"></i>
+      <h5>Higher-Order Thinking</h5>
+      <p>Sharpen decision-making, critical thinking, and problem-solving skills.</p>
+    </div>
+    <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
+      <i class="fas fa-user-graduate feature-icon"></i>
+      <h5>Career-Aligned Growth</h5>
+      <p>Build relevant soft skills that support your professional journey.</p>
     </div>
   </div>
+</div>
 
   <!-- Course Access Modal -->
   <div class="modal fade" id="courseModal" tabindex="-1" aria-hidden="true">
