--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Continuous Organizational Readiness & Excellence Online Courses</title>
+  <title>Continuous Organizational Readiness & Excellence Online Courses (C.O.R.E)</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- FontAwesome Icons -->
@@ -240,7 +240,7 @@
 
   <!-- Features Section -->
   <div class="features-section container" data-aos="fade-up">
-  <h2 class="text-center mb-5">Project CORE</h2>
+  <h2 class="text-center mb-5">What we focus on</h2>
   <div class="row text-center">
     <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
       <i class="fas fa-lightbulb feature-icon"></i>
