--- a/index2.html
+++ b/index2.html
@@ -243,7 +243,7 @@
       <div id="lead" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('leadership.html', event)">Leadership</button>
         <button class="course-btn" onclick="redirectToCourse('high-performing-team.html', event)">High-Performing Teams</button>
-        <button class="course-btn" onclick="redirectToCourse('continuous-improvement.html', event)">Continuous Improvement</button>
+        <button class="course-btn" onclick="redirectToCourse('continous-improvement.html', event)">Continuous Improvement</button>
         <button class="course-btn" onclick="redirectToCourse('defining-capability.html', event)">Defining Capability</button>
         <button class="course-btn" onclick="redirectToCourse('feedbacking-performance.html', event)">Performance Feedback</button>
       </div>
