--- a/thriving-through-change.html
+++ b/thriving-through-change.html
@@ -53,16 +53,17 @@
     <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
-  <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
-  <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
-  <ul>
-    <li>Complete each week in order — finish video, activity, and quiz.</li>
-    <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
-    <li>Fill out all required fields accurately for progress tracking.</li>
-    <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
-    <li>Ensure to submit your week 6 acknowledgement form</li>
-  </ul>
-</div>
+ <main class="container section">
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
+      <ul>
+        <li>Complete each week in order — finish video, activity, and quiz.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
+      </ul>
+    </div>
 
   <main class="container section">
 
