--- a/index2.html
+++ b/index2.html
@@ -198,7 +198,7 @@
       <a href="#about">About CORE</a>
       <a href="#features">Features</a>
       <a href="#courses">Courses</a>
-      <a href="#contact">Contact</a>
+      <a href="https://forms.gle/MjwmoQoKaRqQ77rd8">Contact</a>
     </nav>
   </header>
 
