--- a/passcode.html
+++ b/passcode.html
@@ -106,9 +106,12 @@
   </div>
 
   <script>
-    const PASSCODE = "alpha2025";
+    // Base64‑encoded passcode ("alpha2025" → "YWxwaGEyMDI1")
+    const ENCODED = "YWxwaGEyMDI1";
+
     function checkAccess() {
       const input = document.getElementById("courseCode").value.trim();
+      const PASSCODE = atob(ENCODED);
       const error = document.getElementById("error");
       if (input === PASSCODE) {
         window.location.href = "index2.html";
