--- a/communication-skills.html
+++ b/communication-skills.html
@@ -101,7 +101,7 @@
       <p><strong>🎥 Video 2:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/a7jEWltCSpU')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/r2aGDXOCOBI')">Watch Video</a></p>
       <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://learninganddevelopmentfr.github.io/Online-Learning-Courses-on-Continuous-Organizational-Readiness-Excellence-CORE-/communication-breakdown-simulation.html')">Communication Breakdown Simulation</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePG28K9Upl9Ob5xfez9zzwJ0EzmAH_1y9xNXqLWCe6ilpcFA/viewform?embedded=true')">Take Quiz</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://forms.gle/NFEx5vNgKVeoEZvBA')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -109,13 +109,14 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/bV9yUQV6D60')">Watch Video</a></p>
       <p><strong>📝 Activity:</strong> List 3 stakeholder types in your role and how you'd adapt your approach.</p>
       <p><strong>📄 Document:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Document</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://forms.gle/aTdft76Hz8mY6LPo7')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 3: Communicating Across Teams, Cultures, and Contexts</h4>
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/7MMTnWFhEKE')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.countrynavigator.com/blog/what-are-the-differences-between-high-context-and-low-context-cultures')">View Article</a></p>
-     <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Take Quiz</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdtZKMDVIFOmBBQwdmJYjSB4Je5M8eVqyPUBYqVonBjK-NNWQ/viewform?usp=sharing&ouid=100020194197024824002')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -123,19 +124,20 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/x9xX2cVQSQY')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://nouksanchez.com/nouks-blog/the-7-keys-to-authentic-communication/')">View Article</a></p>
       <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Scenario Challenge: Influence with Authenticity</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://forms.gle/coWCYmw37bvwHaLN6')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 5: Choosing the Right Channels & Sharing Context Effectively</h4>
       <p><strong>🎥 Video 4:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/qE0ZeAOF-wY')">Watch Video</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Take Quiz</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://forms.gle/XesZjrJLxAtKbJ7w9')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 6: Strategic Communication Plan</h4>
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/dpoZldHTYDQ')">Watch Video</a></p>
       <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Scenario Challenge: Influence with Authenticity</a></p>
-      <p><strong>📨 Submission:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Click here to submit full course finish outline</a></p>
+      <p><strong>📨 Submission:</strong> <a href="#" class="resource-link" onclick="openResource('https://forms.gle/6KYDjkBTvqZ3aWmr6')">Click here to submit full course finish outline</a></p>
     </div>
   </main>
 
